<resources>
    <string name="app_name">MoneyFlow</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">amount</string>
    <string name="note">note</string>
    <string name="add">Add</string>
    <string name="total_balance">TOTAL BALANCE</string>
    <string name="amount_hint">฿50,000.00</string>
    <string name="add_transaction">+ Add Transaction</string>
    <string name="activities">Activities</string>
    <string name="edit">Edit</string>
    <string name="menu_delete">delete</string>
</resources>
